<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>telegram_ros</name>
  <version>0.0.0</version>
  <description>The telegram_ros package</description>

  <maintainer email="reinzor@gmail.com">Rein Appeldoorn</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend version_gte="12.0.0">python3-telegram-bot</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
